// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_COMPLETE 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Remove"
        id="be.remove"
      />
    }
    theme="default"
  >
    <PlainButton
      onClick={[Function]}
      type="button"
    >
      <IconCheck
        color="#26C281"
      />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Retry"
        id="be.retry"
      />
    }
    theme="default"
  >
    <PlainButton
      onClick={[Function]}
      type="button"
    >
      <IconRetry />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_ERROR and item is folder 1`] = `""`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_IN_PROGRESS 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      onClick={[Function]}
      type="button"
    >
      <IconInProgress />
    </PlainButton>
  </Tooltip>
</div>
`;

exports[`elements/content-uploader/ItemAction should render correctly with STATUS_PENDING 1`] = `
<div
  className="bcu-item-action"
>
  <Tooltip
    constrainToScrollParent={false}
    constrainToWindow={true}
    isDisabled={false}
    position="top-left"
    text={
      <span
        defaultMessage="Cancel this upload"
        id="be.uploadsCancelButtonTooltip"
      />
    }
    theme="default"
  >
    <PlainButton
      onClick={[Function]}
      type="button"
    >
      <IconClose />
    </PlainButton>
  </Tooltip>
</div>
`;
